History of collective.realestatebroker
======================================

2.0.8 (unreleased)
------------------

- Nothing changed yet.


2.0.7 (2009-01-27)
------------------

- Filtering out floorplans from all the photo lists. [reinout]


2.0.6 (2008-12-18)
------------------

- Some html fixes by jladage?


2.0.5 (2008-12-17)
------------------

- Fixed keyerror when floorplans aren't attached to floors. The keyerror
  itself is caught now and the cause has also been removed. [reinout]


2.0.4 (2008-07-30)
------------------

- Added ReportLab and Products.Maps as dependencies in setup.py.
  [maurits]


2.0.3 (2008-07-03)
------------------

- Unchanged from rc4.


2.0.3 rc4 (2008-07-02)
----------------------

- Creating our own img tags from catalog brains instead of doing a
  .getObject() to use archetypes tag() method which wakes up the
  object. [reinout]


2.0.3 rc3 (2008-06-25)
----------------------

- Fixed strange attributeerror on plone 3.1.2. Moving to that plone version
  fixes a kss bug in the album view. [reinout]


2.0.3 rc2 (2008-06-25)
----------------------

- Added optional max_height attribute to insert_image() to allow protection
  for overly large portrait image on the pdf's homepage. [reinout]

- Added css class to table cells that contain an image in the res/comm
  listings so that the image can be aligned vertically if desired. [reinout]

- Added caching of rendered pdf in an annotation. Saves a lot of cpu
  time. [reinout]


2.0.3 rc1 (released)
--------------------

- Moved rent_buy to the financial schemata for the edit view so that all
  financial fields are on the same screen. [fredvd]

- Added a field for indicating if the price is a fixed price or is still
  negotiable. Not used (yet) in the collective.realestatebroker package view
  templates, but can be exposed in your own template overrides [fredvd]


2.0.2 (released 2008-04-21)
---------------------------

- no changes, make a final release for references [fredvd]

