@@ -4,7 +4,8 @@ History of collective.realestatebroker
 2.0.8 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed bug in floorplan filter: the photo management page also filtered them,
+  making them impossible to edit. [reinout]
 
 
 2.0.7 (2009-01-27)
